2006-02-24 Lluis Sanchez Gual  <lluis@novell.com>   

	* GladeAddIn.Gui/GladeService.cs: Catch errors while creating
	a project.
	* GladeAddIn.Gui/GuiBuilderDisplayBinding.cs:
	* GladeAddIn.Gui/GladeFileDisplayBinding.cs: Track api changes.

2006-01-22 Lluis Sanchez Gual  <lluis@novell.com>   

	* GladeAddIn.Gui/GladeService.cs: Enable layout switching when selecting
	a window file.

2006-01-18 Lluis Sanchez Gual  <lluis@novell.com>   

	* GladeAddIn.Gui/GladePalettePad.cs: Hide the palette buttons which
	create a top level window.
	* GladeAddIn.addin.xml: Assign an Id to the file templates.
	Added commands for creating a window and dialog.
	* GladeAddIn.Gui/ProjectFolderNodeBuilderExtension.cs:
	* GladeAddIn.Commands/GladeCommands.cs: Implemented new commands.
	* GladeAddIn.Gui/GladeFileDisplayBinding.cs: New display binding
	for glade files that just does nothing (it avoids starting glade
	when clicking on the glade resource file).
	* GladeAddIn.mdp: Updated.
	
	* templates/GladeWindow.xft.xml:
	* templates/GladeDialog.xft.xml: Moved to Gtk category.
	
	* GladeAddIn.Gui/GladePropertiesPad.cs:
	* GladeAddIn.Gui/GladeProjectNodeBuilder.cs:
	* GladeAddIn.Gui/GuiBuilderProject.cs:
	* GladeAddIn.Gui/GuiBuilderWindow.cs:
	* GladeAddIn.Gui/GladeWidgetTreePad.cs:
	* GladeAddIn.Gui/ClassUtils.cs:
	* GladeAddIn.Gui/GuiBuilderView.cs:
	* GladeAddIn.Gui/WindowsFolder.cs:
	* GladeAddIn.Gui/GladeProjectPad.cs:
	* GladeAddIn.Gui/PreviewBox.cs:
	* GladeAddIn.Gui/GladeService.cs:
	* GladeAddIn.Gui/GuiBuilderProjectNodeBuilder.cs:
	* GladeAddIn.Gui/GuiBuilderWindowNodeBuilder.cs:
	* GladeAddIn.Gui/WindowsFolderNodeBuilder.cs:
	* GladeAddIn.Gui/EmbedWindow.cs:
	* GladeAddIn.Gui/GuiBuilderEditSession.cs:
	* GladeAddIn.Gui/GladeFileTemplate.cs:
	* GladeAddIn.Gui/GuiBuilderDisplayBinding.cs: Added license header.
	
	* Makefile.am: Added new files.

2006-01-13 Lluis Sanchez Gual  <lluis@novell.com>   

	* GladeAddIn.Gui/GladePropertiesPad.cs: 
	* GladeAddIn.Gui/GladePalettePad.cs: