@@ -1,68 +1,66 @@
 <Project name="GladeAddIn" fileversion="2.0" language="C#" ctype="DotNetProject">
   <Configurations active="Debug">
     <Configuration name="Debug" ctype="DotNetProjectConfiguration">
-      <Output directory="./bin/Debug" assembly="GladeAddIn" />
-      <Build debugmode="True" target="Exe" />
+      <Output directory="../../build/AddIns/GladeAddIn/" assembly="GladeAddIn" />
+      <Build debugmode="True" target="Library" />
       <Execution runwithwarnings="True" consolepause="True" runtime="MsNet" />
-      <CodeGeneration compiler="Csc" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
+      <CodeGeneration compiler="Csc" warninglevel="4" optimize="False" unsafecodeallowed="False" generateoverflowchecks="True" mainclass="" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
     </Configuration>
     <Configuration name="Release" ctype="DotNetProjectConfiguration">
-      <Output directory="./bin/Release" assembly="GladeAddIn" />
-      <Build debugmode="False" target="Exe" />
+      <Output directory="../../build/AddIns/GladeAddIn/" assembly="GladeAddIn" />
+      <Build debugmode="False" target="Library" />
       <Execution runwithwarnings="True" consolepause="True" runtime="MsNet" />
-      <CodeGeneration compiler="Csc" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
+      <CodeGeneration compiler="Csc" warninglevel="4" optimize="True" unsafecodeallowed="False" generateoverflowchecks="True" mainclass="" generatexmldocumentation="False" ctype="CSharpCompilerParameters" />
     </Configuration>
   </Configurations>
   <DeploymentInformation strategy="File">
     <excludeFiles />
   </DeploymentInformation>
   <Contents>
-    <File name="./GladeAddIn.Gui" subtype="Directory" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/GladePalettePad.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/GladeProjectPad.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/GladePropertiesPad.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/GladeService.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.addin.xml" subtype="Code" buildaction="Nothing" />
-    <File name="./GladeAddIn.Gui/GuiBuilderProjectNodeBuilder.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/GladeProjectNodeBuilder.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/WindowsFolderNodeBuilder.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/WindowsFolder.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/GuiBuilderWindowNodeBuilder.cs" subtype="Code" buildaction="Compile" />
-    <File name="./templates" subtype="Directory" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/GuiBuilderWindow.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/GuiBuilderProject.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/EmbedWindow.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/PreviewBox.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/GuiBuilderDisplayBinding.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/GuiBuilderView.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Metacity" subtype="Directory" buildaction="Compile" />
-    <File name="./Metacity/ButtonFunction.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Metacity/ButtonLayout.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Metacity/FrameFlags.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Metacity/FrameType.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Metacity/ObjectManager.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Metacity/Preview.cs" subtype="Code" buildaction="Compile" />
-    <File name="./Metacity/Theme.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/GuiBuilderEditSession.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/GladeWidgetTreePad.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/ClassUtils.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/GladeFileTemplate.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.Commands" subtype="Directory" buildaction="Compile" />
-    <File name="./GladeAddIn.Commands/GladeCommands.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/ProjectFolderNodeBuilderExtension.cs" subtype="Code" buildaction="Compile" />
-    <File name="./GladeAddIn.Gui/GladeFileDisplayBinding.cs" subtype="Code" buildaction="Compile" />
+    <File name="templates/GladeWindow.xft.xml" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="templates/GladeDialog.xft.xml" subtype="Code" buildaction="EmbedAsResource" />
+    <File name="Metacity/ButtonFunction.cs" subtype="Code" buildaction="Compile" />
+    <File name="Metacity/ButtonLayout.cs" subtype="Code" buildaction="Compile" />
+    <File name="Metacity/FrameFlags.cs" subtype="Code" buildaction="Compile" />
+    <File name="Metacity/FrameType.cs" subtype="Code" buildaction="Compile" />
+    <File name="Metacity/ObjectManager.cs" subtype="Code" buildaction="Compile" />
+    <File name="Metacity/Preview.cs" subtype="Code" buildaction="Compile" />
+    <File name="Metacity/Theme.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Commands/GladeCommands.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/ProjectFolderNodeBuilderExtension.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/GladeFileTemplate.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/GladePalettePad.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/GladeProjectNodeBuilder.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/GladeProjectPad.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/GladePropertiesPad.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/GladeService.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/GuiBuilderProject.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/GuiBuilderProjectNodeBuilder.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/GuiBuilderWindow.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/GuiBuilderWindowNodeBuilder.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/GladeWidgetTreePad.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/WindowsFolder.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/EmbedWindow.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/PreviewBox.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/GuiBuilderView.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/GuiBuilderDisplayBinding.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/GuiBuilderEditSession.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/ClassUtils.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/GladeFileDisplayBinding.cs" subtype="Code" buildaction="Compile" />
+    <File name="GladeAddIn.Gui/WindowsFolderNodeBuilder.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
-    <ProjectReference type="Gac" localcopy="True" refto="gladeui-sharp, Version=2.0.0.0, Culture=neutral, PublicKeyToken=ccf7d78a55e9f021" />
-    <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.Ide" />
-    <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.Core.Gui" />
-    <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.Core" />
-    <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.Projects" />
-    <ProjectReference type="Gac" localcopy="True" refto="System.Xml, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-    <ProjectReference type="Gac" localcopy="True" refto="gdk-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
-    <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
-    <ProjectReference type="Gac" localcopy="True" refto="glib-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
-    <ProjectReference type="Gac" localcopy="True" refto="pango-sharp, Version=2.4.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="pango-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="atk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="gtk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="gdk-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Gac" localcopy="True" refto="gconf-sharp, Version=2.8.0.0, Culture=neutral, PublicKeyToken=35e10195dab3c99f" />
+    <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.Core" />
+    <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.Components" />
+    <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.Core.Gui" />
+    <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.Projects" />
+    <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.Projects.Gui" />
+    <ProjectReference type="Project" localcopy="True" refto="MonoDevelop.Ide" />
   </References>
 </Project>
